Add pandas review

--- a/Block1/DSCI511_Python/numpy_panda/numpy_review.ipynb
+++ b/Block1/DSCI511_Python/numpy_panda/numpy_review.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DSCI511 Python Review Session <Quiz 2>"
+    "# DSCI511 Python Numpy Review Session <Quiz 2>"
    ]
   },
   {
@@ -14,6 +14,7 @@
     "**NUMPY IS IMPORTANT**\n",
     "\n",
     "<img src=\"img/np_important.png\" alt=\"Its You\" width=\"500px\">\n",
+    "\n",
     "\n",
     "[image source](https://www.nature.com/articles/s41586-020-2649-2)"
    ]
@@ -197,7 +198,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 strides (understand reshape)\n"
+    "### 2.2 strides (understand reshape)\n",
+    "\n",
+    "[stride tricks in CNN](https://jessicastringham.net/2017/12/31/stride-tricks/)"
    ]
   },
   {
