Update pandas_review - lecture7

--- a/Block1/DSCI511_Python/numpy_pandas/numpy_review.ipynb
+++ b/Block1/DSCI511_Python/numpy_pandas/numpy_review.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -532,64 +532,47 @@
      "output_type": "stream",
      "text": [
       "------------------ a ---------------------\n",
-      "a's id is 140381105517072\n",
+      "a's id is 140654537262784\n",
       "------------------ b ---------------------\n",
-      "b's id is 140381105519392\n",
+      "b's id is 140654537265024\n",
       "a is \n",
-      " [[1 2]\n",
-      " [2 3]]\n",
+      " [1 'm' 3]\n",
       "b is \n",
-      " [[1 2]\n",
-      " [10 3]]\n",
-      "------------------ c ---------------------\n",
-      "c's id is 140381105519632\n",
-      "a is \n",
-      " [[1 2]\n",
-      " [2 3]]\n",
-      "c is \n",
-      " [[1 2]\n",
-      " [11 3]]\n",
-      "------------------ d ---------------------\n",
-      "d's id is 140381105519872\n",
-      "a is \n",
-      " [[1 2]\n",
-      " [2 3]]\n",
-      "d is \n",
-      " [[1 2]\n",
-      " [12 3]]\n"
+      " [1 'm' 10]\n"
      ]
     }
    ],
    "source": [
     "import copy\n",
     "print('------------------ a ---------------------')\n",
-    "a = np.array([[1, 2] , [2, 3]], dtype=object)\n",
+    "# a = np.array([1, 2, \"hello\", 5])\n",
+    "a = np.array([1, 'm', 3], dtype=object)\n",
     "print(f\"a's id is {id(a)}\")\n",
     "\n",
     "print('------------------ b ---------------------')\n",
     "b = np.copy(a)\n",
     "print(f\"b's id is {id(b)}\")\n",
     "\n",
-    "b[1, 0] = 10\n",
+    "b[2] = 10\n",
     "print(f'a is \\n {a}')\n",
     "print(f'b is \\n {b}')\n",
     "\n",
-    "print('------------------ c ---------------------')\n",
-    "c = copy.copy(a)\n",
-    "print(f\"c's id is {id(c)}\")\n",
+    "# print('------------------ c ---------------------')\n",
+    "# c = copy.copy(a)\n",
+    "# print(f\"c's id is {id(c)}\")\n",
     "\n",
-    "c[1, 0] = 11\n",
-    "print(f'a is \\n {a}')\n",
-    "print(f'c is \\n {c}')\n",
+    "# c[3] = 11\n",
+    "# print(f'a is \\n {a}')\n",
+    "# print(f'c is \\n {c}')\n",
     "\n",
-    "print('------------------ d ---------------------')\n",
+    "# print('------------------ d ---------------------')\n",
     "\n",
-    "d = copy.deepcopy(a)\n",
-    "print(f\"d's id is {id(d)}\")\n",
+    "# d = copy.deepcopy(a)\n",
+    "# print(f\"d's id is {id(d)}\")\n",
     "\n",
-    "d[1, 0] = 12\n",
-    "print(f'a is \\n {a}')\n",
-    "print(f'd is \\n {d}')"
+    "# d[3] = 12\n",
+    "# print(f'a is \\n {a}')\n",
+    "# print(f'd is \\n {d}')"
    ]
   }
  ],
