Add pandas profiling section

--- a/Block1/DSCI511_Python/numpy_pandas/pandas_review.ipynb
+++ b/Block1/DSCI511_Python/numpy_pandas/pandas_review.ipynb
@@ -62,7 +62,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. DataFrame"
+    "## 2. DataFrame\n",
+    "\n",
+    "- check the diffs between two dfs\n",
+    "```python\n",
+    "dirty[dirty.ne(clean).any(axis=1)]\n",
+    "```"
    ]
   },
   {
