Update Pandas review

--- a/Block1/DSCI511_Python/numpy_pandas/pandas_review.ipynb
+++ b/Block1/DSCI511_Python/numpy_pandas/pandas_review.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,14 +1519,14 @@
     "\n",
     "# Select by boolean df[boolean, col_name(s)]- return a `copied DataFrame`, series - all possible\n",
     "df[df['Age'] > 50]\n",
-    "# df[df['Age'] > 50]['Age'] = 50 #!!! Cannot do this - [SettingWithCopyWarning] - Views VS Copies\n",
+    "# df[df['Age'] > 50]['Age'] = 50 #!!! Cannot do this - [SettingWithCopyWarning] - Views VS Copies(https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy)\n",
     "\n",
     "\n",
     "# ---------------------------------- df.loc[row_label(s), col_label(s)] -----------------------------\n",
     "# Select row/column by label\n",
     "df.loc[:, 'Age':'Country']\n",
-    "df.loc[[20006, 60000], ['CompTotal', 'Country']]\n",
-    "\n",
+    "df.loc[[20006, 60000], ['CompTotal', 'Country']] # 1st param: list of rows, 2nd param: columns\n",
+    "df.loc[df['Age'] > 30, ['Country', 'CompTotal']] # 1st param: condition, 2nd param: columns\n",
     "\n",
     "# Select by row integer & column label\n",
     "df.loc[df.index[20006], ['CompTotal', 'Country', 'EdLevel', 'Age', 'LanguageWorkedWith']]\n",
@@ -2921,33 +2921,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # --------------------------- 1. rename all columns  ------------------\n",
-    "# # using list comprehension\n",
-    "# # df.columns = [x.lower() for x in df.columns]\n",
+    "# --------------------------- 1. rename columns  ------------------\n",
+    "# 1) rename all columns\n",
+    "# ---------------------\n",
+    "# using list comprehension\n",
+    "# df.columns = [x.lower() for x in df.columns]\n",
     "\n",
-    "# # using str methods\n",
+    "# using str methods\n",
     "# df.columns = df.columns.str.replace(\" \", \"_\")\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # --------------------------- 2. rename some columns - rename, str, apply  ------------------\n",
-    "# # ---------------- 1) using rename method ----------------\n",
+    "# 2) rename some columns\n",
+    "# ---------------------\n",
+    "# 1. Use the argument inplace=True, e.g., df.rename(..., inplace=True), available in most functions/methods\n",
+    "# 2. Re-assign, e.g., df = df.rename(...) - recommended (see why here https://www.youtube.com/watch?v=hK6o_TDXXN8&t=700)\n",
+    "# using rename method - inplace\n",
     "# df.rename(\n",
     "#     columns={\"respondent\": \"respondent_id\", \n",
     "#              \"convertedcomp\": \"salary_in_us\"},\n",
     "#     inplace=True)\n",
     "\n",
     "\n",
-    "# # ---------------- 2) using str method ----------------\n",
-    "# # df['country'] = df['country'].str.upper()\n",
+    "# --------------------------- 2. change columns -> str, apply  ------------------\n",
+    "\n",
+    "# ---------------- 1) using str method ----------------\n",
+    "# df['country'] = df['country'].str.upper()\n",
     "\n",
     "\n",
-    "# # ---------------- 3) using apply ----------------\n",
+    "# ---------------- 2) using apply ----------------\n",
     "'''\n",
     "1) apply on a series\n",
     "'''\n",
-    "# # df['country'] = df['country'].apply(len)\n",
+    "# df['country'] = df['country'].apply(len)\n",
     "\n",
     "\n",
     "'''\n",
@@ -2959,7 +2963,9 @@
     "\n",
     "\n",
     "\n",
-    "# # ---------- 4) using applymap (apply func to every cell) ----------\n",
+    "\n",
+    "\n",
+    "# ---------- 3) using applymap (apply func to every cell) ----------\n",
     "'''\n",
     "df.applymap(), applies a function element-wise (for functions that accept/return single values at a time)\n",
     "'''\n",
@@ -2970,15 +2976,15 @@
     "\n",
     "\n",
     "\n",
-    "# # ------------------------------------------- 3. update a row's all data  ----------------------------------\n",
-    "# # df.loc[2] = [ a list of new values]\n",
+    "# ------------------------------------------- 3. update a row's all data  ----------------------------------\n",
+    "# df.loc[2] = [ a list of new values]\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "# # ------------------------------------------- 4. update a row's some data  ----------------------------------\n",
+    "# ------------------------------------------- 4. update a row's some data  ----------------------------------\n",
     "# 1) using df.loc[2, []] = [ a list of new values]\n",
     "# df.loc[2, [\"age\", \"country\"]] = [1000, \"china\"]\n",
     "# df.loc[2, \"country\"] = \"china\"\n",
@@ -2994,7 +3000,7 @@
     "# df['hobbyist'].map({'Yes': True,\n",
     "#                    'No': False})\n",
     "\n",
-    "# # repalce will not make others be NaN\n"
+    "# repalce will not make others be NaN\n"
    ]
   },
   {
@@ -3456,7 +3462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3477,7 +3483,7 @@
        "Name: LanguageWorkedWith, Length: 183, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3510,8 +3516,8 @@
     "country_grp['PlatformWorkedWith'].value_counts(normalize=True).loc['China'].head(50)\n",
     "\n",
     "# get some stats data\n",
-    "country_grp['ConvertedComp'].median().loc['Australia']\n",
-    "country_grp['ConvertedComp'].agg(['median', 'mean']).loc['Canada']\n",
+    "country_grp['ConvertedComp'].median().loc['Australia']                 # use single aggregation function\n",
+    "country_grp['ConvertedComp'].agg(['median', 'mean']).loc['Canada']     # use multiple aggregation functions \n",
     "\n",
     "\n",
     "# Avoid SeriesGroup error\n",
@@ -3955,7 +3961,7 @@
     "\n",
     "teach_wide = teach_long.pivot(index=\"Name\",     #Column to use to make new frame's index. If None, uses existing index.\n",
     "                              columns=\"Item\", \n",
-    "                              values=\"Value\")\n",
+    "                              .any)\n",
     "\n",
     "\n",
     "\n",
@@ -4595,6 +4601,11 @@
     "- Timedelta (like np.timedelta64)\n",
     "- Period (custom object for regular ranges of datetimes)\n",
     "- DateOffset (custom object like timedelta but factoring in calendar rules)\n",
+    "\n",
+    "Three types [date index](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.resample.html)\n",
+    "- DatetimeIndex\n",
+    "- TimedeltaIndex\n",
+    "- PeriodIndex\n",
     "\n"
    ]
   },
@@ -5692,7 +5703,7 @@
     }
    ],
    "source": [
-    "# custom themes, like this fun cyberpunk theme\n",
+    "# custom themes, like this fun cyberpunk theme(https://github.com/dhaitz/mplcyberpunk)\n",
     "\n",
     "import mplcyberpunk\n",
     "plt.style.use(\"cyberpunk\")\n",
