--- a/Block1/DSCI511_Python/numpy_pandas/pandas_review.ipynb
+++ b/Block1/DSCI511_Python/numpy_pandas/pandas_review.ipynb
@@ -65,8 +65,18 @@
     "## 2. DataFrame\n",
     "\n",
     "- check the diffs between two dfs\n",
+    "\n",
+    "\n",
     "```python\n",
     "dirty[dirty.ne(clean).any(axis=1)]\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "- count how many rows in a data frame  \n",
+    "[link](https://stackoverflow.com/questions/15943769/how-do-i-get-the-row-count-of-a-pandas-dataframe)   \n",
+    "```python\n",
+    "length(df.index)\n",
     "```"
    ]
   },
@@ -218,6 +228,51 @@
    "source": [
     "### 3) df indexing -> Views vs Copies (SettingWithCopyWarning)\n",
     "how powerful **pandas** is!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# difference between `loc` and `iloc`\n",
+    "[link](https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html)\n",
+    "\n",
+    "\n",
+    "<img src=\"img/iloc_loc.png\" alt=\"Its You\" width=\"500px\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s.iloc[:3] will return: \n",
+      "49   NaN\n",
+      "48   NaN\n",
+      "47   NaN\n",
+      "dtype: float64 \n",
+      "\n",
+      "s.loc[:3] will return: \n",
+      "49   NaN\n",
+      "48   NaN\n",
+      "47   NaN\n",
+      "46   NaN\n",
+      "45   NaN\n",
+      "1    NaN\n",
+      "2    NaN\n",
+      "3    NaN\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = pd.Series(np.nan, index=[49,48,47,46,45, 1, 2, 3, 4, 5])\n",
+    "print(f\"s.iloc[:3] will return: \\n{s.iloc[:3]} \\n\")\n",
+    "print(f\"s.loc[:3] will return: \\n{s.loc[:3]}\")"
    ]
   },
   {
