--- a/Block3/DSCI513_DB/quiz2.ipynb
+++ b/Block3/DSCI513_DB/quiz2.ipynb
@@ -422,9 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Entity Relationships\n",
-    "\n",
-    "See INFO20003 slides - Lecture 5.\n"
+    "### 3. Entity Relationships (INFO20003 slides - Lecture 5)\n"
    ]
   },
   {
